# machine-learning-projects

1 - SPY Market Regime Clustering - KMeans/: README.md  model.py
10 - Mini Auto-ML Experiment Runner for Tabular Data/auto_experiment_runner/: README.md  pyproject.toml
10 - Mini Auto-ML Experiment Runner for Tabular Data/auto_experiment_runner/autotab/: metrics.py  models.py  preprocessing.py  runner.py
10 - Mini Auto-ML Experiment Runner for Tabular Data/auto_experiment_runner/configs/: demo.yaml
10 - Mini Auto-ML Experiment Runner for Tabular Data/auto_experiment_runner/outputs/housing_prices_20251127_223238/: config.yaml  leaderboard.csv
10 - Mini Auto-ML Experiment Runner for Tabular Data/auto_experiment_runner/outputs/titanic_survival_20251127_220815/: report.md
10 - Mini Auto-ML Experiment Runner for Tabular Data/auto_experiment_runner/outputs/titanic_survival_20251127_223213/: leaderboard.csv
2 - Short-Term Price Move Classifier - logistic regression, random forest, gradient boosting/: README.md  requirements.txt
3 - Volatility Forecasting - Regression + Evaluation Discipline/: README.md  vol_forecasting.py
5 - Text & Tabular News Headline Sentiment for Tickers (NLP Intro)/: .gitignore  README.md
a - SPY Market Regime Clustering - KMeans/: README.md
c - Volatility Forecasting - Regression + Evaluation Discipline/: README.md
d - Synthetic SOC Alert Anomaly Detector - Unsupervised (isoforest + oneclassSVM)/: README.md  requirements.txt
e - Text & Tabular News Headline Sentiment for Tickers (NLP Intro)/: requirements.txt
(+233 files in other folders)
